# gemma-voicebar

./: AGENTS.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: docs.yml
demos/: _common.py  audio_demo.py  image_demo.py  text_demo.py  video_demo.py
docs/: _config.yml  index.md
docs/explanation/: architecture.md
docs/guide/: change-voice.md  claude-code-voice.md  diagnose-slow-asr.md  fix-permissions.md  index.md  live-typing.md  start-at-login.md
docs/reference/: index.md
docs/tutorials/: getting-started.md
hooks/: speak-summary.py
ops/: Makefile
src/voicebar/: app.py  inject.py  recorder.py  selection.py  speak_cli.py  speech_clean.py  spool.py  state.py
src/voicebar/engine/: __init__.py  tts.py
