[project]
name = "gemma-test"
version = "0.1.0"
description = "Local Gemma 4 multimedia prototype + voice dictation"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "av>=17.0.1",
    "huggingface-hub>=1.15.0",
    "librosa>=0.11.0",
    "pillow>=12.2.0",
    "soundfile>=0.13.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.12.0",
    "torchvision>=0.27.0",
    "transformers>=4.57",
]

[project.optional-dependencies]
bar = [
    "rumps>=0.4",
    "pynput>=1.7",
    "sounddevice>=0.4",
    "scipy>=1.11",
    "mlx-whisper>=0.4.0",
    "kokoro>=0.9",
    "pyobjc-framework-cocoa>=12",
    "pyobjc-framework-quartz>=12",
]

[tool.uv.sources]
gemma-shared = { workspace = true }
gemma-voicebar = { workspace = true }

[tool.uv.workspace]
members = ["packages/shared", "packages/voicebar"]
