[project]
name = "gemma-voicebar"
version = "0.2.0"
description = "Local, accurate voice dictation for macOS — Whisper ASR + Kokoro TTS in a single menu-bar app"
requires-python = ">=3.12"
dependencies = [
    "rumps>=0.4",
    "pynput>=1.7",
    "sounddevice>=0.4",
    "soundfile>=0.13.1",
    "scipy>=1.11",
    "numpy>=1.26",
    "mlx-whisper>=0.4.0",
    "kokoro>=0.9",
    "pyobjc-framework-cocoa>=12",
    "pyobjc-framework-quartz>=12",
]

[project.scripts]
gemma-voicebar = "voicebar.__main__:main"

[dependency-groups]
docs = ["mkdocs-material>=9.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voicebar"]
